Change rabbitmq use local storage class
rabbitmq use general storage class by defult.
In this case, rabbitmq use user defined storage class

--- a/rabbitmq/values.yaml
+++ b/rabbitmq/values.yaml
@@ -254,7 +254,7 @@ endpoints:
 volume:
   chown_on_start: true
   enabled: true
-  class_name: general
+  class_name: dynamic-ceph-rdb
   size: 256Mi
 
 manifests:
