openstack helm deploy docker
remove some packages for deploy docker

--- a/playbooks/osh-infra-deploy-docker.yaml
+++ b/playbooks/osh-infra-deploy-docker.yaml
@@ -20,9 +20,11 @@
   gather_facts: False
   become: yes
   roles:
-    - deploy-python
+    #- deploy-python
+    - build-helm-packages
   tags:
-    - deploy-python
+    #- deploy-python
+    - build-helm-packages
 
 - hosts: all
   vars_files:
@@ -33,11 +35,11 @@
   become: yes
   roles:
     - setup-firewall
-    - deploy-python-pip
-    - deploy-docker
+    #- deploy-python-pip
+    #- deploy-docker
     - deploy-jq
   tags:
     - setup-firewall
-    - deploy-python-pip
-    - deploy-docker
+    #- deploy-python-pip
+    #- deploy-docker
     - deploy-jq
