--- a/roles/build-helm-packages/tasks/setup-helm-serve.yaml
+++ b/roles/build-helm-packages/tasks/setup-helm-serve.yaml
@@ -19,20 +19,21 @@
         executable: /bin/bash
       register: need_helm
       ignore_errors: True
-    - name: install helm client
-      when: need_helm is failed
-      become_user: root
-      shell: |
-              TMP_DIR=$(mktemp -d)
-              curl -sSL https://storage.googleapis.com/kubernetes-helm/helm-${HELM_VERSION}-linux-amd64.tar.gz | tar -zxv --strip-components=1 -C ${TMP_DIR}
-              sudo mv ${TMP_DIR}/helm /usr/bin/helm
-              rm -rf ${TMP_DIR}
-      environment:
-        HELM_VERSION: "{{ version.helm }}"
-      args:
-        executable: /bin/bash
+    #- name: install helm client
+    #  when: need_helm is failed
+    #  become_user: root
+      #shell: |
+      #        TMP_DIR=$(mktemp -d)
+      #        curl -sSL https://storage.googleapis.com/kubernetes-helm/helm-${HELM_VERSION}-linux-amd64.tar.gz | tar -zxv --strip-components=1 -C ${TMP_DIR}
+      #        sudo mv ${TMP_DIR}/helm /usr/bin/helm
+      #        rm -rf ${TMP_DIR}
+      #environment:
+      #  HELM_VERSION: "{{ version.helm }}"
+      #args:
+      #  executable: /bin/bash
     - name: setting up helm client
-      command: helm init --client-only
+      #command: helm init --client-only
+      command: helm init --upgrade -i registry.cn-hangzhou.aliyuncs.com/google_containers/tiller:v2.8.2 --stable-repo-url https://kubernetes.oss-cn-hangzhou.aliyuncs.com/charts
 
 - block:
     - name: checking if local helm server is running
